Fix pixel perfect for programs block on tablet

--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -11,7 +11,7 @@
   @include md-size {
     font-size: 36px;
     margin-left: 0;
-    margin-bottom: 30px;
+    margin-bottom: 26px;
   }
 
   @include lg-size {
@@ -34,6 +34,8 @@
     font-size: 16px;
     line-height: 24px;
     border-bottom: none;
+
+    padding-bottom: 36px;
   }
 }
 
@@ -48,6 +50,7 @@
 
   @include md-size {
     font-size: 20px;
+    padding-right: 46px;
   }
 
   &::after {
@@ -88,11 +91,11 @@
   margin-bottom: 20px;
 
   @include md-size {
-    padding-top: 60px;
+    padding-top: 75px;
     padding-bottom: 60px;
-    padding-left: 60px;
+    padding-left: 53px;
     padding-right: 275px;
-    margin-bottom: 30px;
+    margin-bottom: 33px;
   }
 
   @include lg-size {
@@ -101,6 +104,12 @@
     padding-left: 50px;
     padding-right: 55px;
     width: 570px;
+  }
+
+  &--pro {
+    @include md-size {
+      padding-right: 314px;
+    }
   }
 
   &::before {
@@ -170,7 +179,7 @@
     @include md-size {
       top: 130px;
       left: auto;
-      right: 25px;
+      right: 27px;
       width: 270px;
       height: 115px;
     }
